samples/_failures_safe/1761244190_dbce0a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb2fac33.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_cb2fac33.c:170:13: error: expected expression at end of input
  170 |             case
      |             ^~~~
./samples/SAFE/__tmp_cb2fac33.c:170:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cb2fac33.c:170:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cb2fac33.c:170:13: error: expected declaration or statement at end of input
